@@ -28,5 +28,6 @@ Identify.earliestDatestamp=2001-01-01T00:00:00Z
 Identify.deletedRecord=persistent
 
 # List the supported metadataPrefixes along with the class that performs the associated crosswalk
-Crosswalks.oai_dc=org.dspace.app.oai.OAIDCCrosswalk
+#Crosswalks.didl=org.dspace.app.oai.DIDLCrosswalk
 #Crosswalks.mets=org.dspace.app.oai.METSCrosswalk
+Crosswalks.oai_dc=org.dspace.app.oai.OAIDCCrosswalk
